--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,194 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using webpack" />
-    <title>Your title</title>
+    <link rel="icon" href="./static/logo.svg" type="image/x-icon" />
+    <title>BEAUTY</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <header>
+      <nav class="top-nav">
+        <div class="container">
+          <ul class="menu">
+            <li class="menu__item"><a href="#">Доставка</a></li>
+            <li class="menu__item"><a href="#">Оплата</a></li>
+            <li class="menu__item"><a href="#">Вопрос - ответ</a></li>
+            <li class="menu__item"><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="info">
+        <div class="container">
+          <div class="logo">
+            <img src="static/logo.svg" class="logo__pic" alt="" />
+            <span class="logo__text">BEAUTY</span>
+          </div>
+          <div class="phone-callback">
+            <a class="phone-callback__phone" href="tel:+78121234567"
+              >8 (812) 123-45-67</a
+            >
+            <button class="button button_large">Обратный звонок</button>
+          </div>
+        </div>
+      </div>
+
+      <nav class="bottom-nav">
+        <ul class="menu">
+          <li class="menu__item"><a href="#">Парикмахерская</a></li>
+          <li class="menu__item"><a href="#">Барбершоп</a></li>
+          <li class="menu__item"><a href="#">Маникюр</a></li>
+          <li class="menu__item"><a href="#">Педикюр</a></li>
+          <li class="menu__item"><a href="#">Массаж</a></li>
+          <li class="menu__item"><a href="#">Мебель</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="best-offer">
+        <div class="container">
+          <div class="best-offer__info">
+            <h2 class="best-offer__title">Супер кресло</h2>
+            <p class="best-offer__text">
+              Текст акции всегда отражает суть, а не просто болтовню, поэтому
+              внимательнее
+            </p>
+            <button class="button button_white">Подробнее</button>
+          </div>
+        </div>
+      </section>
+      <section class="special-offers">
+        <div class="container">
+          <h3 class="special-sale__title">Специальные предложения</h3>
+
+          <div class="grid-layout">
+            <article class="good">
+              <img class="good__picture" src="./static/good.png" alt="" />
+              <p class="good__title">
+                Парикмахерское кресло «Норм» гидравлическое
+              </p>
+              <p class="good__price">9 900 ₽</p>
+              <button class="button button_fill">Купить</button>
+            </article>
+
+            <article class="good">
+              <img class="good__picture" src="./static/good.png" alt="" />
+              <p class="good__title">
+                Парикмахерское кресло «Норм» гидравлическое
+              </p>
+              <p class="good__price">9 900 ₽</p>
+              <button class="button button_fill">Купить</button>
+            </article>
+
+            <article class="good">
+              <img class="good__picture" src="./static/good.png" alt="" />
+              <p class="good__title">
+                Парикмахерское кресло «Норм» гидравлическое
+              </p>
+              <p class="good__price">9 900 ₽</p>
+              <button class="button button_fill">Купить</button>
+            </article>
+
+            <article class="good">
+              <img class="good__picture" src="./static/good.png" alt="" />
+              <p class="good__title">
+                Парикмахерское кресло «Норм» гидравлическое
+              </p>
+              <p class="good__price">9 900 ₽</p>
+              <button class="button button_fill">Купить</button>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="notifies">
+        <div class="container">
+          <div class="grid-layout">
+            <div class="notify">
+              <div class="notify__info">
+                <h4 class="notify__title">Получайте бонусы и подарки</h4>
+                <h4 class="notify__text">
+                  Каждый месяц разыгрываем <br />10 000 рублей для наших
+                  клиентов
+                </h4>
+                <div class="notify__action">
+                  <input
+                    class="notify__input"
+                    type="text"
+                    placeholder="Введите e-mail"
+                  />
+                </div>
+              </div>
+              <div class="notify__image-wrapper">
+                <img class="notify__image" src="./static/letter.svg" alt="" />
+              </div>
+            </div>
+            <div class="notify">
+              <div class="notify__info">
+                <h4 class="notify__title">Заходите к нам</h4>
+                <h4 class="notify__text">
+                  Более 300 магазинов <br />
+                  по всей России
+                </h4>
+                <div class="notify__action">
+                  <button class="button button_white">Карта магазинов</button>
+                </div>
+              </div>
+              <div class="notify__image-wrapper"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <section class="contacts">
+        <div class="container">
+          <ul class="social-menu">
+            <li class="social-menu__item">
+              <a href="#" class="">
+                <button class="icon-button">
+                  <img src="./static/youtube.svg" alt="" />
+                </button>
+              </a>
+            </li>
+            <li class="social-menu__item">
+              <a href="#" class="">
+                <button class="icon-button">
+                  <img src="./static/vk.svg" alt="" />
+                </button>
+              </a>
+            </li>
+            <li class="social-menu__item">
+              <a href="#" class="">
+                <button class="icon-button">
+                  <img src="./static/facebook.svg" alt="" />
+                </button>
+              </a>
+            </li>
+            <li class="social-menu__item">
+              <a href="#" class="">
+                <button class="icon-button">
+                  <img src="./static/insagram.svg" alt="" />
+                </button>
+              </a>
+            </li>
+          </ul>
+          <div class="contacts__adress">198555, Невский пр. 140, офис 140</div>
+          <div class="phone-callback">
+            <a class="phone-callback__phone" href="tel:+78121234567"
+              >8 (812) 123-45-67</a
+            >
+            <button class="button button_large">Обратный звонок</button>
+          </div>
+        </div>
+      </section>
+      <section class="copyright">
+        <div class="container">
+          <div class="copyright__text">
+            Лучший магазин (с) 2019 Все права защищены. Интернет-магазин
+            оборудования для салонов красоты
+          </div>
+          <a href="#" class="copyright__text">Политика конфеденциальности</a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
